@@ -2,7 +2,7 @@ const DIAMETER = 20;    // Storm icon diameter
 const PERLIN_ZOOM = 100;    // Resolution for perlin noise
 const TICK_DURATION = 3600000;  // How long in sim time does a tick last in milliseconds (1 hour)
 const ADVISORY_TICKS = 6;    // Number of ticks per advisory
-const START_TIME = moment.utc().startOf('year').valueOf();      // Unix timestamp for beginning of current year
+// const START_TIME = moment.utc().startOf('year').valueOf();      // Unix timestamp for beginning of current year
 const YEAR_LENGTH = 365.2425*24;        // The length of a year in ticks; used for seasonal activity
 const TIME_FORMAT = "HH[z] MMM DD Y";
 const DEPRESSION_LETTER = "H";
@@ -37,6 +37,7 @@ const SNOW_SEASON_OFFSET = 5/6;
 const COLORS = {};      // For storing all colors used in the graphics
 
 function defineColors(){    // Since p5 color() function doesn't work until setup(), this is called in setup()
+    COLORS.bg = color(0,127,255);
     COLORS.storm = {};
     COLORS.storm[EXTROP] = color(220,220,220);
     COLORS.storm[TROPWAVE] = color(130,130,240);
